Fix horizontal scrollbar on Windows
Add overflow-x: hidden to body. On Windows with classic scrollbars,
100vw includes scrollbar width but body does not, causing a few
pixels of horizontal overflow when viewport aspect ratio is close
to or taller than 16:9.

--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -216,6 +216,9 @@ html {
     font-family: GT-Walsheim, Gilroy, Helvetica, sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
 
 .dark html,
 .dark body {
